--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,11 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - ymy4323460
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - ymy4323460/CaSN
+  - ymy4323460/HATCH
+  - ymy4323460/Counterfactual-Debias-Models
+  - ymy4323460/CPR
+  - ymy4323460/CBR
+  - huawei-noah/trustworthyAI/tree/master/research/CausalVAE
+  - ymy4323460/CaRI
