--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -13,18 +13,12 @@
       institution: University College London
       year: 2020
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
+        - Computer Science
     - title: Master
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
+      institution: University of Chinese Academy of Sciences
       year: 2017
       description:
-        - Description 1.
-        - Description 2.
+        - Computer Science
 
 - title: Experience
   type: time_table
